Plugin Name: MarketPress
Author: Aaron Edwards (incsub)

Change Log:
----------------------------------------------------------------------
----------------------------------------------------------------------

1.1.9 - 2/14/2011 - Aaron Edwards
----------------------------------------------------------------------
- Hooks added for external gateway/shipping plugins
- 2Checkout payment plugin conflict with Membership plugin

1.1.8 - 2/03/2011 - Aaron Edwards
----------------------------------------------------------------------
- Lots of hooks added for plugins
- Bug fix when using custom cart templates
- Added SOLUTIONTYPE=Sole to paypal express to allow CC payments without paypal account

1.1.7 - 1/25/2011 - Aaron Edwards
----------------------------------------------------------------------
- Fixed 3.1 compatibility bug due to RC3 revertions
- Added setting to display prices with no decimals

1.1.6 - 1/07/2011 - Aaron Edwards
----------------------------------------------------------------------
- Added 'mp_default_settings' filter to mod default settings array on new stores
- Fixed http://premium.wpmudev.org/forums/topic/marketpress-template-page-mp_global_productsphp-works-but-browsers-title-says-page-not-found?replies=20#post-72045
- Fixed major 3.1 Compatibility bug I missed on orders page
- Fixed order status change success message on orders page

1.1.5 - 1/07/2011 - Aaron Edwards
----------------------------------------------------------------------
- Fixed: Global MarketPress Permalink Updating Problems - for sure this time ;-)

1.1.4 - 1/06/2011 - Aaron Edwards
----------------------------------------------------------------------
- WP 3.1 compatibility
- Autoupdate capable
- Updated default .po file for translation
- Fixed: Global products not removed for deleted/spammed/archived/deactivated sites
- Fixed: Make global tag/category lists filter out those with no counts
- Fixed: Global MarketPress Permalink Updating Problems - bug last time around
