@@ -7,7 +7,8 @@ Change Log:
 
 1.1.9 - 2/14/2011 - Aaron Edwards
 ----------------------------------------------------------------------
-- Hooks added for external gateway/shipping plugins
+- Hooks added for externally loaded gateway/shipping plugins
+- Added mp_items_in_cart() template function to determine if items are in the users cart
 - 2Checkout payment plugin conflict with Membership plugin
 
 1.1.8 - 2/03/2011 - Aaron Edwards
